# EinScan-SDK

./: .gitattributes  README.md
SDK/include/: sn3d_pro_sdk.h
SDK/sdk_demo_pro/: CMakeLists.txt  DataCenter.cpp  DataCenter.h  main.cpp  mesh_param_dialog.cpp  mesh_param_dialog.h  msg_define.h  sdk_demo_pro.cpp  sdk_demo_pro.h  sdk_demo_pro.qrc  sdk_demo_pro.ui
SDK/x64_dll/res/: config.xml  config_publish.xml
SDK/x64_dll/res/Einscan-plus/: config_plus.xml
SDK/x64_dll/res/Einscan-plus/200x150/: LeftCCF.txt  RightCCF.txt  TexCCF.txt  cameraTex_R_T_Rectify.txt
SDK/x64_dll/res/Einscan-plus/200x150_plus_publish/: LeftCCF.txt  RightCCF.txt  cameraTex_R_T_Rectify.txt
SDK/x64_dll/res/Einscan-plus/ini/: BuildSetting.ini  CaptureSettings2plus.ini  system.ini
SDK/x64_dll/res/Einscan-plus/ini/plane/: 201601291112-V200.ple
SDK/x64_dll/res/Einscan-pro/: config_pro.xml
SDK/x64_dll/res/Einscan-pro/200x150/: LaserPlatCali.txt  LeftCCF.txt  RightCCF.txt  TexCCF.txt  cameraTex_R_T_Rectify.txt  wb.txt
SDK/x64_dll/res/Einscan-pro/200x150_pro_pulish/: LeftCCF.txt  RightCCF.txt  cameraTex_R_T_Rectify.txt
SDK/x64_dll/res/Einscan-pro/ini/: CalibrateSection.cas  CalibrateSetting.ini  CameraSetting.ini  CaptureSetting.ini
SDK/x64_dll/res/Einscan-pro/ini/plane/: 201601291112-V200.ple
SDK/x64_lib/: sn3d_pro_sdk.lib
